--- a/SeleniumTests/SeleniumTests.csproj
+++ b/SeleniumTests/SeleniumTests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DriverExtensions.cs" />
     <Compile Include="PageObject\BasePage.cs" />
     <Compile Include="PageObject\BlogPage.cs" />
+    <Compile Include="PageObject\CartPage.cs" />
     <Compile Include="PageObject\EntertainingPage.cs" />
     <Compile Include="PageObject\HomePage.cs" />
     <Compile Include="PageObject\JoinUsPage.cs" />
@@ -97,6 +98,7 @@
       <DependentUpon>Selectors.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\CartPageTests.cs" />
     <Compile Include="Tests\FooterTests.cs" />
     <Compile Include="Tests\MainPageTests.cs" />
     <Compile Include="Tests\ShopPageTests.cs" />
